<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/home" />
    <item
        android:id="@+id/activityFragment"
        android:icon="@drawable/ic_activity"
        app:showAsAction="ifRoom"
        android:title="@string/activity" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom"
        android:title="@string/camera" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"
        android:title="@string/profile" />
</menu>